--- a/src/styles/sections/header.styl
+++ b/src/styles/sections/header.styl
@@ -12,15 +12,13 @@
   /* Also, this is where I nabbed this gradient: https://uigradients.com/ */
 
 
-  background: #AA076B;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #61045F, #AA076B);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #61045F, #AA076B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  // background: #AA076B;  /* fallback for old browsers */
+  // background: -webkit-linear-gradient(to right, #61045F, #AA076B);  /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(to right, #61045F, #AA076B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-
-
-
-
-
+  background: gradient-primary
+  background: -webkit-linear-gradient(to right, gradient-secondary, gradient-primary)
+  background: linear-gradient(to right, gradient-secondary, gradient-primary)
 
 
   /* That's enough gradient */
